--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Sherly</title>
+    <title>Lysher</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -56,14 +56,14 @@
         <header class="s-header">
 
             <div class="header-mobile">
-                <span class="mobile-home-link"><a href="index.html">Sherly.</a></span>
+                <span class="mobile-home-link"><a href="index.html">Lysher.</a></span>
                 <a class="mobile-menu-toggle" href="#0"><span>Menu</span></a>
             </div>
 
             <div class="row wide main-nav-wrap">
                 <nav class="column lg-12 main-nav">
                     <ul>
-                        <li><a href="index.html" class="home-link">Sherly.</a></li>
+                        <li><a href="index.html" class="home-link">Lysher.</a></li>
                         <li class="current"><a href="#intro" class="smoothscroll">Intro</a></li>
                         <li><a href="#about" class="smoothscroll">About</a></li>
                         <li><a href="#works" class="smoothscroll">Works</a></li>
@@ -92,7 +92,7 @@
                         </div>
 
                         <h1 class="text-huge-title">
-                            I am Sherly, <br>
+                            I am Lysher, <br>
                             a digital designer <br>
                             & frontend <br> 
                             developer based <br>
@@ -600,7 +600,7 @@
                     <div class="column lg-3 md-5 tab-6 stack-on-550 contact-block">
                         <h3 class="text-pretitle">Reach me at</h3>
                         <p class="contact-links">
-                            <a href="mailto:sayhello@Sherly.com" class="mailtoui">sayhello@Sherly.com</a> <br>
+                            <a href="mailto:sayhello@Lysher.com" class="mailtoui">sayhello@Lysher.com</a> <br>
                             <a href="tel:+1975432345">+1 69 0000 0000</a>
                         </p>
                     </div>
@@ -615,7 +615,7 @@
                         </ul>
                     </div>
                     <div class="column lg-4 md-12 contact-block">
-                        <a href="mailto:sayhello@Sherly.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello.</a>
+                        <a href="mailto:sayhello@Lysher.com" class="mailtoui btn btn--medium u-fullwidth contact-btn">Say Hello.</a>
                     </div>
                 </div> <!-- end contact-bottom -->
 
@@ -630,7 +630,7 @@
 
             <div class="row">
                 <div class="column ss-copyright">
-                    <span>© Copyright Sherly 2024</span> 
+                    <span>© Copyright Lysher 2024</span> 
                     <span>Design by <a href="https://www.linkedin.com/in/somani-keshari-252b3a237">Somani Keshari</a></span>
                 </div>
 
